# bless-py

./: .gitignore  README.md  pyproject.toml
bless/: __init__.py  __main__.py  logger.py  main.py
bless/buffers/: __init__.py  actions.py  byte_buffer.py  file_buffer.py  ibuffer.py  segment.py  segment_collection.py  simple_buffer.py
bless/gui/: __init__.py  conversion_panel.py  data_book.py  data_view.py  data_view_control.py  data_view_display.py  drawers.py  find_bar.py  goto_offset.py  main_window.py  select_range_bar.py  session.py
bless/gui/areas/: __init__.py  area.py  area_group.py  concrete_areas.py
bless/gui/plugins/: file_operations.py  find_replace.py
bless/tools/: __init__.py  find.py  preferences.py
bless/util/: __init__.py  base_converter.py  interval_tree.py  range.py
